add cache to other data access
git-svn-id: https://svn.code.sf.net/p/provolley/code@23 7941e115-920d-4f1e-bb98-6c77b12abb24

--- a/provolley-fr/trunk/android/AndroidManifest.xml
+++ b/provolley-fr/trunk/android/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:targetSdkVersion="15" />
 
   	 <application
+  	    android:name="org.bamzone.provolleyfr.ProVolleyApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/application_name"
         android:theme="@style/AppTheme" >
